<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Please enter a name for this game"
        android:id="@+id/game_name_title"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_name_value"
        android:text="Game One"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Please select the number of players:"
        android:id="@+id/number_of_players"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/playerCount"
            android:layout_weight="0.09">
            <RadioButton android:id="@+id/two_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_players"
                android:checked="true"/>
            <RadioButton android:id="@+id/three_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_players" />
            <RadioButton android:id="@+id/four_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_players" />
        </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Please select monster selection type:"
        android:id="@+id/monster_selection_type_title"
        android:layout_weight="0.09" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09">
        <RadioButton android:id="@+id/random_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/random_choice" />
        <RadioButton android:id="@+id/players_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_choice" />
    </RadioGroup>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/num_of_players_ok"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.09"
            android:onClick="startNextActivity"/>

</LinearLayout>