<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Player One"
        android:id="@+id/Player_one_title"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player One Name:"
        android:id="@+id/Player_one_name_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player_one_value"
        android:text="Player one"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center"
        android:isScrollContainer="true">
            <RadioButton android:id="@+id/boogieman_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boogeyman_name"
                android:layout_gravity="center|left"
                android:checked="false"
                />
            <RadioButton android:id="@+id/clown_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clown_name"
                android:layout_gravity="center|left"
                />
            <RadioButton android:id="@+id/werewolf_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/werewolf_name"
                android:layout_gravity="center|left"
                />
            <RadioButton android:id="@+id/zombie_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zombie_name"
                android:layout_gravity="center|left"
                />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/Player_one_done"
        android:layout_gravity="center_horizontal" />

</LinearLayout>